Merge default with user-supplied jvmargs
Previously, setting any value for `org.gradle.jvmargs` caused all default settings to be lost.
This often resulted in important defaults like `-XXMaxMetaspaceSize` being omitted when a user
attempted to provide more memory to a build process.

With this change, default jvmargs will be retained unless specifically overridden by a user-supplied argument.
One exception is that setting either -Xmx or -Xms will cause the default heap size settings to be omitted, preventing
user-supplied values from conflicting with default values (like having a min heap larger than max heap).

Fixes #19750